--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "cakephp/cakephp": "~4.1.0",
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.2",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^2.0.3",
